# colormaps

./: .coverage  .gitignore  LICENSE  README.md  cm_xml_to_matplotlib.py  cmaps.template  cmaps_generator.py  demo.ipynb  generate_docs.ipynb  generate_docs.py  pyproject.toml  setup.py  test.rgb
.github/workflows/: release_to_pypi.yml
cmaps/: cmaps.py  utils.py
colormaps/: __init__.py  _compat.py  _registry.py  _version.py  cmaps.py  colormap.py  utils.py
colormaps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
colormaps_doc/: .jekyll-metadata  .prettierrc  Gemfile  _config.yml  index.md
colormaps_doc/_posts/: 2021-07-06-welcome-to-jekyll.markdown
colormaps_doc/_site/: 404.html  feed.xml  index.html
colormaps_doc/docs/: cmocean.md  colorbrewer.md  scientific.md  tableau.md
docs/: .prettierignore  .prettierrc  Gemfile  _config.yml  _config_old.yml  index.md  just-the-docs.gemspec  package-lock.json  package.json
docs/_includes/: fix_linenos.html  footer_custom.html  head.html  nav.html  title.html
docs/_layouts/: default.html  table_wrappers.html
docs/_posts/: 2021-07-06-welcome-to-jekyll.markdown
docs/_sass/: base.scss  buttons.scss  code.scss  content.scss  labels.scss  layout.scss  modules.scss  navigation.scss  print.scss  search.scss  tables.scss  typography.scss
docs/docs/: Circular.md  Diverging.md  Other.md  (+9 more)
extras/: cm_xml_to_matplotlib.py  cmaps_generator.py  demo.ipynb  demo_ultraplot.ipynb  generate_docs.ipynb  generate_docs.py
tests/: conftest.py  test_cmaps.py  test_colormap.py  test_compat.py  test_registry.py  test_utils.py
(+895 files in other folders)
